--- a/unidade02/16/exemplo02/index.html
+++ b/unidade02/16/exemplo02/index.html
@@ -7,25 +7,17 @@
     <title>Exemplo 02</title>
 </head>
 <body>
-    <h1>Trabalhando com formulários - select e option</h1>
+    <h1>Trabalhando com formulários - tag select e option</h1>
     <form>
         <label for="nome">Nome</label>
-        <input type="text" 
-            name="nome" 
-            id="nome"
-            placeholder="Informe seu nome."
-            size="50" 
-            required autofocus>
+        <input type="text" name="nome" id="nome" size="50" required autofocus><span>(*)</span>
         <label for="email">E-mail</label>
-        <input type="email" name="email" id="email"
-            placeholder="Informe seu e-mail"
-            required
-            size="50">
+        <input type="email" name="email" id="email" size="50" required><span>(*)</span>
         <label for="tipo">Tipo</label>
         <select name="tipo" id="tipo">
-            <option value="elogio">Elogio</option>
-            <option value="sugestao">Sugestão</option>
-            <option value="reclamacao">Reclamação</option>
+            <option>Elogio</option>
+            <option>Sugestão</option>
+            <option>Reclamação</option>
         </select>
         <hr>
         <input type="submit" value="Enviar">
