--- a/unidade03/22/exemplo01/index.html
+++ b/unidade03/22/exemplo01/index.html
@@ -7,16 +7,18 @@
     <title>Exemplo 01</title>
 </head>
 <body>
+    <h1>Trabalhando com containers e itens - Flexbox</h1>
     <div class="container">
-        <div class="box01">
-            Box 01
-        </div>
-        <div class="box02">
-            Box 02
-        </div>
-        <div class="box03">
-            Box 03
-        </div>
+        <div class="item red">1</div>
+        <div class="item green">2</div>
+        <div class="item blue">3</div>
+        <div class="item">4</div>
+    </div>
+    <div class="container container02">
+        <div class="item red">1</div>
+        <div class="item green">2</div>
+        <div class="item blue">3</div>
+        <div class="item">4</div>
     </div>
 </body>
 </html>
