--- a/unidade04/24/exemplo02/index.html
+++ b/unidade04/24/exemplo02/index.html
@@ -16,7 +16,12 @@
         <h2>Menus</h2>
     </nav>
     <main>
-        <h1>Principal</h1>
+        <section>
+            <h1>Principal</h1>
+        </section>
+        <aside>
+            <h2>Lateral</h2>
+        </aside>
     </main>
     <footer>
         <h2>Rodapé</h2>
